WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278380
REGRESSION(
282416@main
): [GTK] link error with wayland and GBM disabled
https://bugs.webkit.org/show_bug.cgi?id=278380
Summary
REGRESSION(282416@main): [GTK] link error with wayland and GBM disabled
Jim Mason
Reported
2024-08-20 08:01:10 PDT
Platform X11 GBM off This commit has broken my X11, non-GBM build in a huge way. First, there is a link error with an undefined symbol WebKit::Display::isWayland(): Undefined first referenced symbol in file _ZNK6WebKit7Display9isWaylandEv Source/WebKit/CMakeFiles/WebKit.dir/UIProcess/API/glib/WebKitProtocolHandler.cpp.o Second, if I coax the build to completion by providing a trivial implementation for `isWayland` (I simply have it return false), the build completes, but the WebKitWebProcess crashes on WebGL and WebGL2 pages. It also randomly crashes on other webpages, including www.google.com. I am trying to capture a backtrace, but it's proving difficult for some reason. This ought to be easily reproducable on pretty much any X11 build, certainly the undefined symbol error. More worrying is the general instability that it has brought. If I revert the
282416@main
commit, then everything builds and runs normally.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-08-20 22:27:43 PDT
GTK4 or GTK3?
Carlos Garcia Campos
Comment 2
2024-08-20 22:54:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32516
Carlos Garcia Campos
Comment 3
2024-08-20 22:55:11 PDT
I can't reproduce the crashes, could you share all the build options and the output of webkit://gpu?
Jim Mason
Comment 4
2024-08-21 03:34:14 PDT
Thanks, sorry for the dilatory reply. I was out riding my motorbike on the twisties, which is what I do mostly when I am not making life more interesting for you and the Igalia team ;-) I am happy to report that the patch clears the build issue. Unfortunately, the crashing WebKitWebProcess remains. It is a GTK3 build. webkit://gpu and the cmake options follow. If you need something more, just let me know. By the way, I investigated the crash some more and cannot get a backtrace. gdb is always reporting that the 'current thread has terminated'. I have never encountered this before; normally with SIGSEGV etc, it stops in gdb before exiting. Perhaps this is a clue. -- Enabled features: -- ENABLE_BUBBLEWRAP_SANDBOX ..................... OFF -- ENABLE_DOCUMENTATION OFF -- ENABLE_DRAG_SUPPORT ........................... ON -- ENABLE_GAMEPAD OFF -- ENABLE_INTROSPECTION .......................... ON -- ENABLE_JOURNALD_LOG OFF -- ENABLE_MINIBROWSER ............................ ON -- ENABLE_PDFJS ON -- ENABLE_QUARTZ_TARGET .......................... OFF -- ENABLE_SPELLCHECK ON -- ENABLE_TOUCH_EVENTS ........................... ON -- ENABLE_VIDEO ON -- ENABLE_WAYLAND_TARGET ......................... OFF -- ENABLE_WEBDRIVER ON -- ENABLE_WEB_AUDIO .............................. ON -- ENABLE_X11_TARGET ON -- USE_AVIF ...................................... OFF -- USE_GBM OFF -- USE_GSTREAMER_TRANSCODER ...................... ON -- USE_GSTREAMER_WEBRTC OFF -- USE_GTK4 ...................................... OFF -- USE_JPEGXL OFF -- USE_LCMS ...................................... ON -- USE_LIBBACKTRACE OFF -- USE_LIBDRM .................................... ON -- USE_LIBHYPHEN OFF -- USE_LIBSECRET ................................. ON -- USE_SKIA OFF -- USE_SOUP2 ..................................... ON -- USE_WOFF2 ON { "Version Information": { "WebKit version": "WebKitGTK 2.45.6 (
r282487
)", "Operating system": "SunOS 5.11 11.3 i86pc", "Desktop": "GNOME", "Cairo version": "1.17.8 (build) 1.17.8 (runtime)", "GStreamer version": "1.20.4 (build) GStreamer 1.20.4 (runtime)", "GTK version": "3.24.38 (build) 3.24.38 (runtime)" }, "Display Information": { "Identifier": "1", "Type": "X11", "Screen geometry": "0,0 1920x1080", "Screen work area": "0,28 1920x1024", "Depth": "24", "Bits per color component": "8", "Font Scaling DPI": "96", "Screen DPI": "93.60940451422194", "VBlank type": "Timer", "VBlank refresh rate": "60Hz" }, "Hardware Acceleration Information": { "Policy": "never", "WebGL enabled": "Yes" } }
Carlos Garcia Campos
Comment 5
2024-08-21 04:57:39 PDT
Ok, let's use this bug for the build failure, that we can fix now, and open a new bug to continue investigating the crash.
EWS
Comment 6
2024-08-21 05:02:43 PDT
Committed
282555@main
(f83fd3eb47e9): <
https://commits.webkit.org/282555@main
> Reviewed commits have been landed. Closing PR #32516 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug