Cherry-pick 282555@main (f83fd3eb47e9). https://bugs.webkit.org/show_bug.cgi?id=278380

REGRESSION(282416@main): [GTK] link error with wayland and GBM disabled
    https://bugs.webkit.org/show_bug.cgi?id=278380

    Reviewed by Miguel Gomez.

    Fix the build with ENABLE_WAYLAND_TARGET=OFF and USE_GBM=OFF

    * Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
    (WebKit::bubblewrapSpawn):
    * Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
    * Source/WebKit/UIProcess/gtk/Display.cpp:
    (WebKit::Display::isX11 const):
    (WebKit::Display::isWayland const):

    Canonical link: https://commits.webkit.org/282555@main